--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <img src="./assets/logo.png" />
 
-      <div>Part of <strong> A SIMPLE FABOLUS THANKSGIVING</strong></div>
+      <div>Part of<strong style="padding-left: 5px">A SIMPLE FABOLOUS THANKSGIVING</strong></div>
     </header>
     <main>
       <div>
@@ -19,7 +19,7 @@
 
       <div>
         <p>
-          Wow your taste buds with this festive focaccia appetizer topped with sweet caramelized onions, tartcranberries, and creamy brie. It will become your
+          Wow your taste buds with this festive focaccia appetizer topped with sweet caramelized onions, tart cranberries, and creamy brie. It will become your
           new favorite holiday starter!
         </p>
       </div>
